# sdlpp

./: CMakeLists.txt  events.h  font.h  geometry.h  pixel.h  surface.h  video.cpp  video.h
include/sdlpp/: error.h  events.h  font.h  geometry.h  pixel.h  sdl.h  surface.h  video.h
src/: font.cpp  surface.cpp  video.cpp
